# SchuelyManagement

./: CMakeLists.txt  README.md
include/: Funktionen.h  Profil_bearbeiten.h  daten_ausgeben.h  fileLib.h  kbinput.h  strings.h  utils.h
source/: Funktionen.c  Profil_bearbeiten.c  daten_ausgeben.c  fileLib.c  kbinput.c  main.c  strings.c  utils.c
